<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.lojavirtual.CadastroActivity">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome" />

        <EditText
            android:id="@+id/campo_nome"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_nascimento" />

        <EditText
            android:id="@+id/campo_data_nascimento"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="dd/mm/aaaa"
            android:inputType="numberSigned" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cpf" />

        <EditText
            android:id="@+id/campo_cpf"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="Somente Números"
            android:inputType="numberSigned" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/campo_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="nome@email.com"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefone" />

        <EditText
            android:id="@+id/campo_telefone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="(dd) xxxxx-xxxx"
            android:inputType="numberSigned" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_usuario" />

        <EditText
            android:id="@+id/new_usuario"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_senha" />

        <EditText
            android:id="@+id/new_senha"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_repitasenha" />

        <EditText
            android:id="@+id/new_repitasenha"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="50px"
            android:paddingRight="50px">


            <Button
                android:id="@+id/btn_voltar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="voltar"
                android:text="@string/btn_voltar" />

            <Button
                android:id="@+id/btn_confirmar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="confirmar"
                android:text="@string/btn_confirmar" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>